tests/resources/invalid/type/operation/undefined_field_fstring.mamba
"your name is {your_name}"
